--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.gmbal</groupId>
+			<artifactId>gmbal</artifactId>
+			<version>3.2.0-b003</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
@@ -118,5 +123,5 @@
     </build>
     <properties>
         <jersey-version>1.18.3</jersey-version>
-    </properties>
+        </properties>
 </project>
